# TraxHost

./: .gitignore  CMakeLists.txt  README.md  xcSSP.cmake  xcXMX.cmake
release/macos/presets/: default
releases/xmx/: PercCmd  S80perccmd  S90perccmd  TraxHost  how_to_install_trax.txt  install  librtaudio.so.7  perccmd.json  perccmd.sh
resources/: how_to_install_trax.txt
resources/xmx/: install.sh
scripts/: cp.macos.plugins.sh  release.xmx.sh
src/: AudioDevice.cpp  AudioDevice.h  Display.cpp  Display.h  Hardware.cpp  Hardware.h  Log.cpp  Log.h  Module.cpp  Module.h  SSPModule.cpp  SSPModule.h  TraxHost.cpp  main.cpp
